added new div with class name add

--- a/index.html
+++ b/index.html
@@ -323,6 +323,14 @@
         </div>
     </footer>
 
+    <div class="add">
+        <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, tenetur obcaecati. Explicabo inventore culpa ut. Sequi expedita accusamus quae reiciendis beatae doloribus distinctio provident odio. Natus tenetur amet quibusdam commodi.
+        Quis ex placeat earum atque a delectus natus repellat quas ullam voluptates, minus neque nisi esse quaerat necessitatibus reprehenderit distinctio architecto commodi velit eum quibusdam. Saepe neque perferendis dicta impedit.
+        Voluptates aliquam voluptate asperiores. Vero minus iure eius amet at maiores molestiae eum libero consectetur in. Perferendis, veritatis ab itaque enim harum ea officiis commodi alias tempora ipsam id inventore!
+        Quibusdam, natus facere! Repellendus adipisci deleniti nihil. Laborum blanditiis, maiores harum quibusdam temporibus eaque veritatis dignissimos minima voluptatum iure? Odit iste nesciunt corrupti ut eveniet debitis dolorem non dolorum dignissimos!
+        Accusamus facere numquam nesciunt iure tempora cum nam, eaque quam doloremque sint ut, autem, voluptate dolor qui enim deleniti! Possimus, blanditiis temporibus. Est quaerat eligendi magnam libero. Magni, dignissimos ipsa.</h2>
+    </div>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/slick.js"></script>
 
